# point-cloud-data-processing

./: .gitignore  README.md
pcd_write/: pcd_write.cpp
project/: analysis_results_example.json  environment.yml  pipeline.ipynb  pipeline.py  preprocess.py  transform.py  visualized_analysis.py
project/down_sample/: CMakeLists.txt  down_sample.cpp
project/file_format/: file_format.py  ply_binary.json
project/pcd_read/: pcd_read  pcd_read.cpp
project/pipeline/: pipeline.ipynb  preprocess.py  transform.py  visualized_analysis.py
tutorials/open3d/: down_sample.py  remove_outlier.py  visualization.py  visualization_thread.py
tutorials/open3d/data/output/: bunny - downsampled.ply
tutorials/pcd_read/: pcd_read  pcd_read.cpp
tutorials/pcd_write/: CMakeLists.txt  pcd_write
tutorials/region_growing_segmentation/: CMakeLists.txt  region_growing_segmentation.cpp
